# gsl-using-lua

./: CMakeLists.txt  LICENSE.md
scripts/: EvaluateFunction.lua  IntegrateFunction.lua
src/: lua536.h  lua_evaluate.c  lua_evaluate.h  lua_integrate.c  lua_integrate.h  main.c  main_loop.c  main_loop.h
